# lensforge

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
custom/: .env.example
custom/extensions/dermatology/: README.md  brisque_checker.py  falconsai_nsfw.py  vit_skin.py
docs/: developer-guide.md
docs/concept/: LensForge_better_than_gpt.md  LensForge_other20.md  LensForge_preambula.md  LensForge_sport_apps.md
lensforge/: __init__.py  app.py  config.py  container.py
lensforge/interfaces/: __init__.py  domain_classifier.py  nsfw_detector.py  quality_checker.py
lensforge/loaders/: __init__.py  image_loader.py
lensforge/pipeline/: analysis_pipeline.py
lensforge/routes/: analyze.py
lensforge/schemas/: __init__.py  request.py  response.py
tests/: conftest.py  smoke_test.sh  test_health.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_analyze_endpoint.py  test_brisque_checker.py  test_falconsai_nsfw.py  test_image_loader.py  test_interfaces.py  test_pipeline.py  test_schemas.py  test_vit_skin.py
